# docs/swagger.json
@@ -422,6 +422,13 @@
                         "name": "questionnaire",
                         "in": "formData",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "是否只是计算前5题，传\\",
+                        "name": "pre_calibrate",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -498,6 +505,15 @@
                         "required": true,
                         "schema": {
                             "type": "string"
+                        }
+                    },
+                    {
+                        "description": "是否需要第6题",
+                        "name": "need_full",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "boolean"
                         }
                     }
                 ],
